# xrpl-perp-dex

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  SECURITY-AUDIT.md  SECURITY-REAUDIT-2.md  SECURITY-REAUDIT-3.md  docker-compose.yml  pyproject.toml  shell.nix
docs/: btc-perp-dex-feasibility-ru.md  btc-perp-dex-feasibility.md  comparison-arch-network-ru.md  comparison-arch-network.md  enclave_verification.md  frontend-api-guide.md  oustanding_questions.md  perp-dex-faq-ru.md  post-audit-status.md  sgx-enclave-capabilities-and-limits-ru.md  sgx-enclave-capabilities-and-limits.md  vault-design-spec.md  vault-requirements.md  xls-survey-for-perp-dex-ru.md  xls-survey-for-perp-dex.md
grant/: proof-of-traction.md  xrpl-grants-application.en.md  xrpl-grants-application.md
hackathon/: plan-36h.en.md  plan-36h.md
nginx/: api-perp.ph18.io.dev
orchestrator/: Cargo.toml  Dockerfile  schema.sql
orchestrator/src/: api.rs  auth.rs  commitment.rs  db.rs  election.rs  main.rs  orderbook.rs  p2p.rs  perp_client.rs  trading.rs  types.rs  vault_mm.rs  withdrawal.rs  ws.rs  xrpl_monitor.rs  xrpl_signer.rs
orchestrator/tests/: Dockerfile.mock-enclave  integration_test.rs  mock_enclave_server.py
research/: 01-feasibility-analysis.en.md  02-tee-perp-mechanics-design.en.md  02-tee-perp-mechanics-design.md  03-production-architecture.en.md  03-production-architecture.md  04-multi-operator-architecture.en.md  04-multi-operator-architecture.md  06-latency-analysis.en.md  07-failure-modes-and-recovery.en.md  07-failure-modes-and-recovery.md  08-tee-vs-smart-contract-security.en.md  08-tee-vs-smart-contract-security.md  09-grant-narrative.en.md  09-grant-narrative.md  10-comparison-with-hyperliquid.en.md  10-comparison-with-hyperliquid.md  failure-modes-test-report.md
tests/: multisig_coordinator.py  reset_multisig_setup.py  scenarios_full_report.json  (+7 more)
(+1 files in other folders)
