[package]
name = "perp-dex-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Orchestrator for Perp DEX on XRPL with SGX enclave"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (XRPL address derivation, DER encoding, SHA-512Half)
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web server (user-facing API)
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# P2P (order flow replication between operators)
libp2p = { version = "0.54", features = ["gossipsub", "tcp", "noise", "yamux", "tokio", "macros", "identify"] }

# Ethereum (Sepolia CommitmentRegistry submission)
ethers = { version = "2", features = ["abigen"] }

# XRPL binary codec + tx building
xrpl-mithril-codec = "0.3"
xrpl-mithril-models = "0.4"
xrpl-mithril-tx = "0.4"
xrpl-mithril-types = "0.1"

# Error handling
anyhow = "1"
